new file:   filesNewSonda/jsonScripts/ebsapl.json new file:   filesNewSonda/jsonScripts/m3.json new file:   filesNewSonda/jsonScripts/nhypmadrid.json renamed:    filesNewSonda/jsonScripts/ebsa.json -> filesNewSonda/jsonScripts/nhypmadridOLD.json new file:   filesNewSonda/powerShell/check_M3_modification.ps1 new file:   filesNewSonda/powerShell/check_ebsapl_modification.ps1 new file:   filesNewSonda/powerShell/check_nhypmadrid01_modification.ps1 new file:   filesNewSonda/powerShell/restart_rpa_agent.ps1 modified:   filesNewSonda/telegraf.d/hyperion.conf modified:   filesOldSonda/powerShell/check_ebsapl_modification.ps1

--- a/filesNewSonda/telegraf.d/hyperion.conf
+++ b/filesNewSonda/telegraf.d/hyperion.conf
@@ -1,14 +1,15 @@
-[[inputs.file]]
-  files = ["C:\\Karate\\karate-robot\\target\\karate-reports\\nhypmadrid.json"]
-  data_format = "json"
+
+[[inputs.exec]]
+  commands = ["powershell.exe -File C:\\\\Users\\\\jbello5\\\\GitHub_Albardiaz\\\\SondaMax\\\\filesNewSonda\\\\powerShell\\\\check_nhypmadrid01_modification.ps1"]
+  data_format = "json" 
   name_override = "karate_sondanavegacion"
-  interval = "8m"
+  interval = "8m"  
   tag_keys = ["result", "prefixedPath", "name", "step", "stepnum", "status", "resultDate", "duration", "failedCount", "id", "passedCount"]
-  #json_time_key = "date_navi"
-  #json_time_format = "unix"
-  [inputs.file.tags]
+  timeout = "7m"
+  [inputs.exec.tags]
     group = "INFRA"
     service = "Navigation"
+    app = "Hyperion"
     url = "http://nhypmadrid01.uee.local/"
 
 [[processors.enum]]
