new file:   filesNewSonda/jsonScripts/nhypmadridV2.json new file:   filesNewSonda/powerShell/ebsapl.ps1 new file:   filesNewSonda/powerShell/m3.ps1 renamed:    filesNewSonda/powerShell/check_nhypmadrid01_modification.ps1 -> filesNewSonda/powerShell/nhypmadrid01.ps1 new file:   filesNewSonda/powerShell/nhypmadrid1WithouCheckDate.ps1 new file:   filesNewSonda/powerShell/test.ps1 deleted:    filesNewSonda/telegraf.d/ebsa.conf new file:   filesNewSonda/telegraf.d/ebsaV2.conf modified:   filesNewSonda/telegraf.d/hyperion.conf deleted:    filesNewSonda/telegraf.d/hyperion.conf.old renamed:    filesNewSonda/telegraf.d/hyperion.conf.ok -> filesNewSonda/telegraf.d/hyperionV2.conf deleted:    filesNewSonda/telegraf.d/hyperion_poc.conf deleted:    filesNewSonda/telegraf.d/mtool.conf new file:   filesNewSonda/telegraf.d/mtoolV2.conf

--- a/filesNewSonda/telegraf.d/hyperion.conf
+++ b/filesNewSonda/telegraf.d/hyperion.conf
@@ -1,16 +1,15 @@
-
 [[inputs.exec]]
-  commands = ["powershell.exe -File C:\\\\Users\\\\jbello5\\\\GitHub_Albardiaz\\\\SondaMax\\\\filesNewSonda\\\\powerShell\\\\check_nhypmadrid01_modification.ps1"]
-  data_format = "json" 
-  name_override = "karate_sondanavegacion"
-  interval = "8m"  
-  tag_keys = ["result", "prefixedPath", "name", "step", "stepnum", "status", "resultDate", "duration", "failedCount", "id", "passedCount"]
-  timeout = "7m"
-  [inputs.exec.tags]
-    group = "INFRA"
-    service = "Navigation"
-    app = "Hyperion"
-    url = "http://nhypmadrid01.uee.local/"
+  commands=['powershell "C:\Users\jbello5\GitHub_Albardiaz\SondaMax\filesNewSonda\powerShell\check_nhypmadrid01_modification.ps1"']
+  interval="8m"
+  timeout="7m"
+  tag_keys=["result", "prefixedPath", "name", "step", "stepnum", "status", "resultDate", "duration", "failedCount", "id", "passedCount"]
+  data_format="json"
+  name_override="karate_sondanavegacion"
+[inputs.exec.tags]
+  group = "INFRA"
+  service = "Navigation"
+  app = "Hyperion"
+  url = "http://nhypmadrid01.uee.local/"
 
 [[processors.enum]]
   [[processors.enum.mapping]]
