--- a/filesNewSonda/telegraf.d/mtoolV2.conf
+++ b/filesNewSonda/telegraf.d/mtoolV2.conf
@@ -1,14 +1,15 @@
-[[inputs.file]]
-  files = ["C:\\Karate\\karate-robot\\target\\karate-reports\\output.json"]
+# Read metrics from one or more commands that can output to stdout
+[[inputs.exec]]
+  commands = ['powershell "C:\M360\telegraf\powerShell\m3.ps1"']
   data_format = "json"
   name_override = "karate_sondanavegacion"
-  interval = "15s"
+  interval = "8m"
   tag_keys = ["result", "prefixedPath", "name", "step", "stepnum", "status", "resultDate", "duration", "failedCount", "id", "passedCount"]
-  #json_time_key = "date_navi"
-  #json_time_format = "unix"
-  [inputs.file.tags]
+  timeout = "7m"
+  [inputs.exec.tags]
     group = "INFRA"
     service = "Navigation"
+    app = "Hyperion"
     url = "http://nhypmadrid01.uee.local/"
 
 [[processors.enum]]
@@ -31,15 +32,3 @@
   [processors.converter.tags]
     integer = ["result_code", "status_code", "duration", "failedCount", "id", "passedCount"]
     string = ["resultDate"]
-
-[[processors.regex]]
-  namepass = ["karate_sondanavegacion"]
-  [[processors.regex.fields]]
-    key = "resultDate"
-    pattern = "([0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}) a. m."
-    replacement = "${1}AM"
-  
-  [[processors.regex.fields]]
-    key = "resultDate"
-    pattern = "([0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}) p. m."
-    replacement = "${1}PM"
